# RL-RiskAwareExecution

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.mplconfig/: fontlist-v390.json
configs/: eval_rl_vs_benchmarks.default.yaml  experiment.default.yaml  train_ppo.default.yaml
notebooks/: 01_smoke_demo.ipynb
scripts/: eval_ppo_vs_benchmarks.py  generate_eval_report.py  run_benchmarks.py  run_experiment.py  run_multiseed_robustness.py  run_smoke.py  run_walkforward_benchmarks.py  train_ppo.py  train_sac.py
src/rl_riskaware/: __init__.py  config.py  types.py
src/rl_riskaware.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rl_riskaware/agents/: __init__.py  policy_eval.py  sb3_env.py
src/rl_riskaware/baselines/: __init__.py  pov.py  twap.py  vwap.py
src/rl_riskaware/data/: __init__.py  io.py  splits.py
src/rl_riskaware/env/: __init__.py  execution_env.py
src/rl_riskaware/evaluation/: __init__.py  group_summary.py  implementation_shortfall.py  summary.py  walkforward.py
src/rl_riskaware/features/: __init__.py  builder.py
src/rl_riskaware/reporting/: __init__.py  artifacts.py  (+1 more)
tests/: test_config_loader.py  test_data_features.py  test_data_splits.py  test_eval_summary.py  test_execution_env.py  test_group_summary.py  test_implementation_shortfall.py  test_policy_eval.py  test_report_builder.py  test_reporting_artifacts.py  test_run_experiment_helpers.py  test_run_experiment_latest_pointer.py  test_sb3_env_adapter.py  test_twap_baseline.py  test_vwap_pov_baselines.py  test_walkforward.py
tests/fixtures/: market_small.csv
